# MusicLevelAutoGen

./: .gitignore  DownbeatTracking.py  KerasModel.py  LevelGenTest.py  LevelInfo.py  LevelMaker.py  MadmomToKeras.py  ModelTool.py  MusicDownload.py  NoteEnvironment.py  NoteFeatureProcessor.py  NoteLevelGenerator.py  NoteModel.py  NotePreprocess.py  QQDancerLog.py  QQDancerMusicFeature.py  QQDancerMusicFeature.spec  README.md  TFLstm.py  TFLstm.spec  TFLstm2_dyrnn.py  TensorFlowRnn.py  TrainDataProcesser.py  UnitTest.py  analysis.py  batch-beat-tracking.py  calc_bpm.py  eyebrow.py  idol_template.xml  level-infos.xml  logger.py  madmon_test.py  myprocesser.py  plot_segmentation.py  postprocess.py  segmentation.py  tradition-mode-autogen.py  util.py
level/: idol_100002.xml  idol_100003.xml  idol_100004.xml  idol_100005.xml  sync0018.xml  sync0019.xml  sync0020.xml  sync0021.xml  sync0022.xml  sync0023.xml
level_mark_singing/: 100576SEXY_LOVE.xml  100626butterfly.xml  100664Baby.xml  101134I_like_that.xml  101187Black_Suit.xml  101352ruqi.xml  101359CLEAR.xml  101474shuxiu.xml  101531When_Can_I_See_You_Again.xml  101541Sweeter_Than_Fiction.xml  101548tiandiwujiang.xml  101698TONIGHT.xml  101870yijiannan.xml
lstm/: KerasModel.py  README  configure.xml  dummy_experiment.py  keras_test.py  lstm.py  myprocesser.py  postprocess.py  predict_test.py  test.py  training_testing.py
midi/: midi_train_list.csv  midi_validate_list.csv
midi/midifiles/: 107-独占神话 - 蔡依林.midi  109-即时生效 - 蔡依林.midi  113-日不落 - 蔡依林.midi  114-说爱你 - 蔡依林.midi  123-小伤口 - 蔡依林.midi  126-睁一只眼闭一只眼 - 蔡依林.midi  133-风起时想你 - 陈楚生.midi  145-爱就爱了 - 陈琳.midi  170-对的人 - 戴爱玲.midi  214-荷塘月色 - 凤凰传奇.midi  220-我的好兄弟 - 高进.midi  25-甜甜圈 - BY2.midi  329-爱你不是两三天 - 梁静茹 (1).midi  33-你的微笑 - 飞儿.midi  384-一千年以后 - 林俊杰.midi  427-你到底爱谁 - 刘嘉亮.midi  47-中国话 - S.H.E.midi  48-好奇傻死猫 - By2 (1).midi  652-你不是真正的快乐 - 五月天.midi  674-猪之歌 - 香香.midi  688-冲动 - 萧亚轩 (1).midi  83-坚持到底 - 阿杜.midi  967-香水百合 - 张韶涵 (1).midi
note_op/: hmm_viterbi_op.h  hmm_viterbi_op_kernel.cu.cc  note_op.cc  note_op_util.h
note_op/cmake/: CMakeLists.txt  get_tensorflow_info.py
note_op/src/: hmm_viterbi_op.cc  hmm_viterbi_op.h  hmm_viterbi_op_kernel.cu  note_op.cc  note_op_util.cc
pyinstaller_hook/: hook-madmom.py
train/: 2differenttears_nm.csv  4minuteshm_nm.csv  ai_nm.csv  aibujieshi_nm.csv  aiqingfadeguang_nm.csv  aiqingmaimai_nm.csv  aiwoshaoyidian_nm.csv  andy_nm.csv  applause_nm.csv  badapple_nm.csv  barbarbar_nm.csv  beautifullight_nm.csv  behappy_nm.csv  beiduofenbingdu_nm.csv  beiershuang_nm.csv  beyondzhendeaini_nm.csv  bigbangyitianyitian_nm.csv  blackbullet_nm.csv  blackmakeup_nm.csv  brandnewdays_nm.csv  dafeiji_nm.csv  dajiahao_nm.csv  darkhorse_nm.csv  goldtown_nm.csv  gonggongptt_nm.csv  grafiore_ nm.csv  grafiore_nm.csv  huanxiang_nm.csv  huashuo_nm.csv  hue_nm.csv  huijiaxiang_nm.csv  huolaladeqingge_nm.csv  huozaicike_nm.csv  hxdssan_nm.csv  ibetmylife_nm.csv  iesunou_nm.csv  ificoulefly_nm.csv  luhashidai_nm.csv  maihuocai_nm.csv  mingzhentankenan_nm.csv  (+18 more)
train_data/: csv_validate_list.csv  ktv_song_info.csv  level_train_list.csv  midi_train_list.csv  midi_validate_list.csv  rm_train_list.csv  song_seg.csv
train_data/csv_singing/: ktv_10002_4_in_love_爱还在.csv  ktv_10012_蔡依林_Mr Q.csv  ktv_10015_蔡依林_非卖品.csv  ktv_10016_蔡依林_乖乖牌.csv  ktv_10017_蔡依林_海洋之心.csv  ktv_10020_陈慧琳_不得了.csv  ktv_10023_陈慧琳_陪我失眠.csv  ktv_10024_陈奕迅_白玫瑰.csv  ktv_10025_陈奕迅_低等动物.csv  ktv_10026_成龙_男儿当自强.csv  ktv_10032_F.I.R._把爱放开.csv  ktv_10039_Hebe_魔鬼中的天使.csv  ktv_10049_S.H.E._super star.csv  ktv_10050_S.H.E._半糖主义.csv  ktv_10055_S.H.E._金钟罩铁布衫.csv  ktv_10056_S.H.E._伦敦大桥垮下来.csv  ktv_10057_S.H.E._美丽新世界.csv  ktv_10059_S.H.E._十面埋伏.csv  ktv_10061_S.H.E._天亮了.csv  ktv_10062_S.H.E._天使在唱歌.csv  ktv_10064_S.H.E._五月天.csv  ktv_10065_S.H.E._一眼万年.csv  ktv_10066_S.H.E._紫藤花.csv  ktv_10067_Sara_我的心好冷.csv  ktv_10068_Selina_梦.csv  ktv_10072_Tank_千年泪.csv  ktv_10073_Tank_全世界都停电.csv  ktv_10075_Twins_变身派对.csv  ktv_10079_Twins_星光游乐园.csv  ktv_10081_周传雄_冬天的秘密.csv  ktv_10082_李玖哲_别说.csv  ktv_10083_李玖哲_想太多.csv  ktv_10084_阿杜_他一定很爱你.csv  ktv_10085_阿木_有一种爱叫做放手.csv  ktv_10086_阿牛_爱我久久.csv  ktv_10087_阿牛_浪花一朵朵.csv  ktv_10088_阿牛_桃花朵朵开.csv  ktv_10089_阿桑_寂寞在唱歌.csv  ktv_10091_阿桑_一直很安静.csv  ktv_10094_爱乐团_拿出你的爱.csv  (+46 more)
train_data/csv_singing/disable/: ktv_10033_F.I.R._你的微笑.csv  ktv_10105_蔡依林_单身公害.csv  ktv_10123_蔡依林_小伤口.csv  ktv_10165_陈奕迅_你的背包.csv  ktv_10214_凤凰传奇_荷塘月色.csv  ktv_10243_后弦_昆明湖.csv  ktv_10329_梁静茹_爱你不是两三天.csv  ktv_10594_王力宏_改变自己.csv  ktv_10652_五月天_你不是真正的快乐.csv  ktv_10674_香香_猪之歌.csv
train_data/csv_singing/uncheck/: ktv_10100_蔡琴_恰似你的温柔.csv  ktv_10117_蔡依林_玩爱之徒.csv  ktv_10142_陈慧娴_人生何处不相逢.csv  ktv_10144_陈坤_月半弯.csv  ktv_10145_陈琳_爱就爱了.csv  ktv_10155_陈小春_人情味.csv  ktv_10170_戴爱玲_对的人.csv  ktv_10171_戴军_阿莲.csv  ktv_10198_范玮琪_是非题.csv  ktv_10206_范逸臣_无乐不作.csv  ktv_10207_飞轮海_出神入化.csv  ktv_10231_郭富城_樱之花.csv  ktv_10233_海楠_爱啦啦.csv  ktv_10249_胡彦斌_Waiting for you.csv  ktv_10252_胡彦斌_蝴蝶.csv  ktv_10253_胡彦斌_皇帝.csv  ktv_10280_梁静茹_如果能在一起.csv  ktv_10283_梁静茹_失忆.csv  ktv_10285_江映蓉_把握你的美.csv  ktv_10286_江映蓉_坏天使.csv  ktv_10290_金海心_把耳朵叫醒.csv  ktv_10332_梁静茹_分手快乐.csv  ktv_10357_陶喆_天天.csv  ktv_10360_陶喆_小镇姑娘.csv  ktv_10362_陶喆_找自己.csv  ktv_10366_王菲_打错了.csv  ktv_10367_王菲_堕落.csv  ktv_10373_王力宏_放开你的心.csv  ktv_10375_王心凌_Honey.csv  ktv_10420_刘德华-梁朝伟_无间道.csv  ktv_10426_刘嘉亮_爱我就别伤害我.csv  ktv_10433_刘若英_我很好.csv  ktv_10434_刘若英_一辈子的孤单.csv  ktv_10442_罗志祥_爱转角.csv  ktv_10444_罗志祥_精舞门.csv  ktv_10445_罗志祥_呛司呛司.csv  ktv_10471_南拳妈妈_初恋粉色系.csv  ktv_10478_潘玮柏_UUU.csv  ktv_10480_潘玮柏_路太弯.csv  ktv_10483_潘玮柏_我对天空说.csv  (+301 more)
train_data/level_mark_singing/: 101354mouren.xml  101358xia_lian.xml  101423houlaidewomen.xml  101546wanshenji.xml  101697shuixian.xml  101864shenmege.xml
train_data/midifiles/: 105-单身公害 - 蔡依林.midi  115-特务J - 蔡依林.midi  146-旅行的意义 - 陈绮贞.midi  165-你的背包 - 陈奕迅.midi  17-爱的双重魔力 - By2.midi  178-不想长大 - S.H.E (1).midi  18-爱丫爱丫 - BY2.midi  196-可不可以不勇敢 - 范玮琪.midi  201-最初的梦想 - 范玮琪.midi  229-三国恋 - Tank (1).midi  243-昆明湖 - 后弦.midi  246-给我一个不伤心的理由 - 胡力.midi  26-仙草蜜 - BY2.midi  324-少年中国 - 李宇春 (1).midi  359-当你 - 林俊杰 (1).midi  38-流星雨 - F4.midi  594-改变自己 - 王力宏.midi
